syntax = "proto3";

package user;

option go_package = "./proto";

service UserService {
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
    rpc AuthenticateUser(AuthenticateUserRequest) returns (AuthenticateUserResponse);
    rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse);
}

message RegisterUserRequest {
    string username = 1;
    string password = 2;
    string email = 3;
}

message RegisterUserResponse {
    int32 id = 1;
    string username = 2;
    string email = 3;
}

message AuthenticateUserRequest {
    string username = 1;
    string password = 2;
}

message AuthenticateUserResponse {
    string token = 1;
}

message GetUserProfileRequest {
    int32 id = 1;
}

message GetUserProfileResponse {
    int32 id = 1;
    string username = 2;
    string email = 3;
}